fixed tests and mis-alignments of select / textarea

--- a/components/textarea/src/vwc-textarea.scss
+++ b/components/textarea/src/vwc-textarea.scss
@@ -1,4 +1,5 @@
 @use '@vonage/vvd-typography/scss/typography';
+@use '@vonage/vwc-textfield/src/vwc-textfield';
 @use '@vonage/vwc-textfield/src/vwc-textfield-variables' as textfield-variables;
 
 :host {
@@ -28,8 +29,8 @@
 	.mdc-text-field__input {
 		@include typography.typography-cat-shorthand('body-2');
 
-		padding-left: 14px;
-		padding-right: 14px;
+		padding-inline-start: textfield-variables.$horizontal-gutter;
+		padding-inline-end: textfield-variables.$horizontal-gutter;
 	}
 
 	&.mdc-text-field--outlined {
